--- a/src/04-controler.html
+++ b/src/04-controler.html
@@ -134,27 +134,13 @@
           requestAnimationFrame(renderScene);
           renderer.render(scene, camera);
         }
-
-        /**
-         * Initialize the statistics domelement(  temporary  ,later will add to the util.js )
-         *
-         * @param {Number} type 0: fps, 1: ms, 2: mb, 3+: custom
-         * @returns stats javascript object
-         */
-
-        function initStats(type) {
-          var panelType =
-            typeof type !== "undefined" && type && !isNaN(type)
-              ? parseInt(type)
-              : 0;
-          var stats = new Stats();
-
-          stats.showPanel(panelType); // 0: fps, 1: ms, 2: mb, 3+: custom
-          document.body.appendChild(stats.dom);
-
-          return stats;
-        }
       }
+
+      window.addEventListener("resize", () => {
+        camera.aspect = window.innerWidth / window.innerHeight;
+        camera.updateProjectionMatrix();
+        renderer.setSize(window.innerWidth, window.innerHeight);
+      });
     </script>
   </body>
 </html>
