--- a/AR/index.html
+++ b/AR/index.html
@@ -1,12 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Document</title>
-  </head>
-
   <!-- include A-Frame obviously -->
   <script src="https://aframe.io/releases/0.6.0/aframe.min.js"></script>
   <!-- include ar.js for A-Frame -->
@@ -14,9 +7,22 @@
   <body style="margin : 0px; overflow: hidden;">
     <a-scene embedded arjs>
       <!-- create your content here. just a box for now -->
-      <a-box position="0 0.5 0" material="opacity: 0.5;"></a-box>
+      <a-marker preset="hiro">
+        <a-box position="0 0.5 0" material="color: red;">
+          <a-animation
+            attribute="rotation"
+            dur="3000"
+            to="360 360 0"
+            repeat="indefinite"
+            easing="linear"
+          >
+          </a-animation>
+        </a-box>
+      </a-marker>
+      <a-entity camera></a-entity>
+
       <!-- define a camera which will move according to the marker position -->
-      <a-marker-camera preset="hiro"></a-marker-camera>
+      <!-- <a-marker-camera preset="hiro"></a-marker-camera> -->
     </a-scene>
   </body>
 </html>
